# tokie

./: .gitignore  CATSU_TOKENIZERS_TODO.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TOKENIZERS.md  benchmark_results.json  tokenizers.json
.github/workflows/: release.yml  speed-regression.yml  tokenizer-accuracy.yml
benches/: tokenize.rs
crates/pretokie/: Cargo.toml  README.md
crates/pretokie/src/: configs.rs  lib.rs  util.rs
crates/pretokie/src/core/: config.rs  iter.rs  mod.rs
crates/pretokie/src/impls/: cl100k.rs  deepseek.rs  gpt2.rs  mod.rs  o200k.rs  qwen.rs  smollm.rs  voyage.rs
crates/tokie/: Cargo.toml
crates/tokie-python/: Cargo.toml  README_PYPI.md  pyproject.toml  tokie.pyi
crates/tokie-python/src/: lib.rs
crates/tokie-python/tests/: test_tokenizer.py
crates/tokie/benches/: README.md  loading.rs  tokenize.rs
crates/tokie/examples/: bench_all.rs  bench_batch.rs  bench_huggingface.rs  bench_llama.rs  bench_normalizers.rs  bench_parallel.rs  bench_pretok.rs  bench_tiktoken.rs  bench_unigram.rs  bench_vs_hf.rs  bench_war_and_peace.rs  bench_wordpiece.rs  check_models.rs  compare_libs.rs  compare_sentencepiece.rs  compare_simple_bpe.rs  convert_and_verify.rs  diagnose_failures.rs  from_pretrained.rs  generate_all_models.rs  profile_bert.rs  profile_bpe.rs  profile_unigram.rs  regenerate_all_v11.rs  regenerate_from_json.rs  regenerate_models.rs  save_all_tokenizers.rs  test_configurable.rs  test_enwik8.rs  test_gpt2.rs  test_llama4.rs  test_loading.rs  test_parallel_accuracy.rs  test_postprocessor.rs  test_sentencepiece_models.rs  test_sentencepiece_v2.rs  test_simple_encoder.rs  tiktoken_compat.rs  verify_embedding_models.rs  verify_models.rs
crates/tokie/src/: decoder.rs  diff.rs  hf.rs  hub.rs  lib.rs  normalizer.rs  padding.rs  postprocessor.rs  serde.rs  tokenizer.rs  types.rs
crates/tokie/src/encoder/: backtracking.rs  mod.rs  sentencepiece.rs  sentencepiecev2.rs  simple.rs  unigram.rs  wordpiece.rs
crates/tokie/src/pretok/: lexer.rs  mod.rs  regex.rs
crates/tokie/tests/: accuracy.rs
scripts/: benchmark_vs_hf.py  bump-version.sh  generate_charts.py  populate_new_repos.py  test_all_tokenizers.py  update_existing_repos.py  upload_tkz_to_hf.py
src/: compatibility.rs  hf.rs  lib.rs  tokenizer.rs  types.rs
