[package]
name = "tokie"
version = "0.1.0"
edition = "2024"
description = "Fast BPE tokenizer using Aho-Corasick automata"
license = "AGPL-3.0"

[dependencies]
daggrs = { path = "../daggrs" }
fnv = "1.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
bpe = { path = "../rust-gems/crates/bpe" }
kitoken = { path = "../kitoken", default-features = false, features = ["std", "convert-tokenizers"] }
tiktoken-rs = "0.9"

[[example]]
name = "gpt2_benchmark"
path = "examples/gpt2_benchmark.rs"

[[example]]
name = "compare_bpe"
path = "examples/compare_bpe.rs"

[[example]]
name = "compare_all"
path = "examples/compare_all.rs"

[[example]]
name = "parallel_benchmark"
path = "examples/parallel_benchmark.rs"
