[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "tokie"
version = "0.0.2"
description = "Blazingly fast tokenizer — 50x faster, 10x smaller, 100% accurate"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]

[tool.maturin]
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
