[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "tokie"
version = "0.0.4"
description = "Blazingly fast tokenizer — 50x faster, 10x smaller, 100% accurate"
readme = "README_PYPI.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/chonkie-inc/tokie"
Repository = "https://github.com/chonkie-inc/tokie"
Documentation = "https://docs.rs/tokie"
"Bug Tracker" = "https://github.com/chonkie-inc/tokie/issues"

[tool.maturin]
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
